Mon May  7 10:16:30 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/rubygems/test_gem_installer.rb (TestGemInstaller#test_dir): fix
	  argument order.  expected value must come first.

Mon May 07 09:14:11 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_ssl.c: support TLSv1.1 & TLSv1.2. Add 
	  SSLContext#version to inspect the version that was negotiated for
	  a given connection.
	* ext/openssl/extconf.rb: detect TLS 1.1 & 1.2 support.
	* test/openssl/test_ssl.rb: add tests for TLS 1.1 & 1.2 given they
	  are supported by the native OpenSSL being used.

Sun May  6 21:34:29 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (io_encoding_set): suppress warnings. [ruby-dev:45627]
	  this tmp1 is not required after r35538.

	* addr2line.c: suppress warnings.

Sun May  6 18:39:39 2012  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): remove unused variable `size'.

Sun May  6 14:50:03 2012  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb: show actual read length in an error message.

Sat May  5 06:43:10 2012  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*: Imported minitest 2.12.1 (r7323)
	* test/minitest/*: ditto

Sat May  5 01:47:33 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/zlib/test_zlib.rb (test_inflate): add a test for Zlib.inflate.
	  patched by headius (Charles Nutter). [ruby-core:44859] [Bug #6398]

	* test/zlib/test_zlib.rb (test_deflate): add a test for Zlib.deflate.

Sat May  5 00:53:55 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (parse_mode_enc): remove warnings 'Ignoring internal encoding'.
	  [ruby-core:44455] [Bug #6324]

	* io.c (io_encoding_set): ditto.

Fri May  4 07:19:02 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rdoc/parser.rb (RDoc.binary?): fix wrong regexp.
	  [ruby-core:44798] [Bug #6393]

Fri May  4 01:33:20 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parser.rb (RDoc.alias_extension): a real file is irrelevant